General
	* Changed leak reporter to save memory by using a StringBuilder.

Math
	* Added float conversion operator to Rational.
	* Fixed a bug in Matrix3x2.TransformPoint.

D3DCompiler
	* Added missing ShaderInputType enum.

DXGI
	* Added lazy enumeration of adapters to Factory and Factory1.
	* Added lazy enumeration of outputs to Adapter.

Direct3D 9
	* Fixed a bug in KeyframedAnimationSet.RegisterAnimationKeys that caused invalid values to be set.
	* Fixed the DeviceEx.FromPointer method.
	* Fixed text encoding issue in XFile parsing.

Direct3D 10
	* Added missing StateBlockMask constructor.
	* Integrated a patch that fixes a lot of StateBlockMask issues.

Direct3D 11
	* Fixed shader wrappers to allow getting class instances.
	* Added convenience methods to simplify getting groups of state from pipeline wrappers.
	* Changed FFT.AttachBuffersAndPrecompute to allow null arguments.

DirectWrite
	* Changed TextRenderer into ITextRenderer to allow user implementation.
	* Added Strikethrough and Underline classes
	* Removed extraneous MeasuringMethod enum.
	* Fixed a crash bug in BitmapRenderTarget for drawing glyph runs.

XInput
	* Added an exception to Controller when created with UserIndex.Any, to make it clear that it is not allowed.